fix: key shift/capslock  reaction correct

--- a/_variables.scss
+++ b/_variables.scss
@@ -36,7 +36,10 @@ $color-CL_on: green;
 //-----------------------------------------------------------------------------------------
 
 
-// Sizes =================================
+// === Sizes ==============================================================================
+$size-key-normal-width: 70px;
+$size-key-normal-height: 70px;
+//--------------------------------------------------------------------
 $size-font-on-keys: 21px;
 //----------------------------------------------------------------------------
 $size-border-main: 3px;
@@ -44,10 +47,8 @@ $size-border-key: 1px;
 //------------------------------------------------------------------------------------
 $border-radius: 15px;
 $border-radius-key: 10px;
-$border-radius-key-pressed: 35px;
+$border-radius-key-pressed: $size-key-normal-width/2;
 //-----------------------------------------------------------------------------------
-$size-key-normal-width: 70px;
-$size-key-normal-height: 70px;
 
 $size-key-fn-long-width: $size-key-normal-width*3;// enter, shift, caps-lock
 $size-key-fn-short-width:$size-key-normal-width*2; // control-key
