--- a/style.scss
+++ b/style.scss
@@ -85,6 +85,7 @@ body {
         background-color: $color-hover;
         color: $color-background;
         border-radius: $border-radius-key-pressed;
+        box-shadow: 0 0 15px 5px $ruby-red;
     }
 }
 
